🐛 Bug(home): fix hero section image overlapping issue with text for 425px mobile view

--- a/src/styles/base/_helpers.scss
+++ b/src/styles/base/_helpers.scss
@@ -21,13 +21,13 @@
  */
 .sc-decor {
   @apply absolute;
-  
+
   &--right {
-    @apply -right-4
-    sm:-right-8
-    lg:-right-16
-    xl:-right-20
-    2xl:-right-24;
+    @apply right-0
+    sm:right-8
+    lg:right-16
+    xl:right-20
+    2xl:right-24;
   }
 
   &--left {
